Remove unecessary alt attributes on community page

--- a/source/localizable/community/index.html.erb
+++ b/source/localizable/community/index.html.erb
@@ -25,7 +25,7 @@
     <article class="contributions-feature-list">
       <div class="contributions-feature-item">
         <div class="contributions-feature-icon-wrapper">
-          <%= image_tag ("contributions-icons/icon-extensions.svg") %>
+          <%= image_tag("contributions-icons/icon-extensions.svg", alt: '') %>
         </div>
         <div class="contributions-feature-text-wrapper">
           <h3 class="contributions-feature-header">
@@ -38,7 +38,7 @@
       </div>
       <div class="contributions-feature-item">
         <div class="contributions-feature-icon-wrapper">
-            <%= image_tag ("contributions-icons/icon-project-templates.svg") %>
+            <%= image_tag("contributions-icons/icon-project-templates.svg", alt: '') %>
         </div>
         <div class="contributions-feature-text-wrapper">
           <h3 class="contributions-feature-header">
@@ -51,7 +51,7 @@
       </div>
       <div class="contributions-feature-item">
         <div class="contributions-feature-icon-wrapper">
-          <%= image_tag ("contributions-icons/icon-deployment-solutions.svg") %>
+          <%= image_tag("contributions-icons/icon-deployment-solutions.svg", alt: '') %>
         </div>
         <div class="contributions-feature-text-wrapper">
           <h3 class="contributions-feature-header">
@@ -70,7 +70,7 @@
   <div class="wrap-container">
     <div class="forum-item-graphic-wrapper">
       <div class="forum-browser browser">
-        <img src="/images/community-forum.jpg" alt="Middleman forum">
+        <img src="/images/community-forum.jpg" alt="">
       </div>
     </div>
     <div class="forum-text-wrapper">
