Use semantic tag on built with middleman page

--- a/source/localizable/community/built-using-middleman.html.erb
+++ b/source/localizable/community/built-using-middleman.html.erb
@@ -3,7 +3,7 @@ title: Sites Built Using Middleman
 ---
 
 <div class="c-container">
-  <p>These are sites that are built using Middleman.</p>
+  <h1>These are projects that are built using Middleman.</h1>
 
   <p>
     <%= link_to(
