--- a/source/stylesheets/modules/_built-with-middleman.scss
+++ b/source/stylesheets/modules/_built-with-middleman.scss
@@ -38,7 +38,7 @@
   background: white;
   border-radius: $base-border-radius;
   border: 1px solid $base-border-color;
-  color: lighten($medium-gray, 10);
+  color: $dark-gray;
   position: absolute;
   right: 26px;
   font-size: $base-font-size * 0.75;
