Set see more button and forum image accessible names

--- a/source/localizable/community/index.html.erb
+++ b/source/localizable/community/index.html.erb
@@ -70,7 +70,7 @@
   <div class="wrap-container">
     <div class="forum-item-graphic-wrapper">
       <div class="forum-browser browser">
-        <img src="/images/community-forum.jpg" alt="">
+        <img src="/images/community-forum.jpg" alt="<%= t("community.forum.preview_alt") %>">
       </div>
     </div>
     <div class="forum-text-wrapper">
