Add semantic markup in nav and improve home link label

--- a/source/partials/_site_navigation.erb
+++ b/source/partials/_site_navigation.erb
@@ -1,29 +1,31 @@
-<nav class="c-site-frame__navigation
-            c-site-navigation
-            u-flex
-            u-flex-align-items-center
-            u-flex-justify-space-between">
-  <%= link_to(
-    "Middleman",
-    "#{locale_prefix}/",
-    class: "c-site-navigation__site-name"
-  ) %>
+<nav class="c-site-frame__navigation c-site-navigation" arial-label="<%= t("site_navigation.label") %>">
+  <ul class="u-flex">
+    <li class="c-site-navigation__item">
+      <% link_to("#{locale_prefix}/", class: "c-site-navigation__site-name") do %>
+        Middleman
+        <span class="visually-hidden"><%= t("site_navigation.home") %></span>
+      <% end %>
+    </li>
 
-  <div class="u-flex u-flex-nowrap">
-    <%= link_to(
-      t("site_navigation.support"),
-      "#{locale_prefix}/support/",
-      class: "c-site-navigation__link"
-    ) %>
-    <%= link_to(
-      t("site_navigation.community"),
-      "#{locale_prefix}/community/",
-      class: "c-site-navigation__link"
-    ) %>
-    <%= link_to(
-      t("site_navigation.docs"),
-      "#{locale_prefix}/basics/install/",
-      class: "c-site-navigation__link"
-    ) %>
-  </div>
+    <li class="c-site-navigation__item">
+      <%= link_to(
+        t("site_navigation.support"),
+        "#{locale_prefix}/support/",
+      ) %>
+    </li>
+
+    <li class="c-site-navigation__item">
+      <%= link_to(
+        t("site_navigation.community"),
+        "#{locale_prefix}/community/",
+      ) %>
+    </li>
+
+    <li class="c-site-navigation__item">
+      <%= link_to(
+        t("site_navigation.docs"),
+        "#{locale_prefix}/basics/install/",
+      ) %>
+    </li>
+  </ul>
 </nav>
