--- a/source/stylesheets/modules/landing/_introduction.scss
+++ b/source/stylesheets/modules/landing/_introduction.scss
@@ -112,7 +112,8 @@
     left: 2px;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     border-color: $mm-navy;
     background-color: lighten($mm-navy, 45);
     transition: all .3s ease-in-out;
