Add skip to content link

--- a/source/layouts/core.erb
+++ b/source/layouts/core.erb
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div class="c-site-frame">
+      <a class="c-site-frame__skip-link" href="#main"><%= t("site_navigation.skip_link") %></a>
       <%= partial "partials/site_navigation" %>
       <%= yield %>
       <%= partial "partials/site_footer" %>
