--- a/source/layouts/documentation.erb
+++ b/source/layouts/documentation.erb
@@ -11,7 +11,7 @@
         <%= partial "partials/documentation_nav" %>
       </nav>
 
-      <div class="c-site-frame__content-main js-anchor-links">
+      <div class="c-site-frame__content-main js-anchor-links" id="main">
         <%= yield %>
       </div>
     </div>
