--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :core do %>
-  <main class="c-site-frame__body" role="main">
+  <main class="c-site-frame__body" role="main" id="main">
     <%= yield %>
   </main>
 <% end %>
