--- a/source/partials/_hero.erb
+++ b/source/partials/_hero.erb
@@ -1,4 +1,4 @@
-<header class="hero" role="banner">
+<header class="hero" role="banner" id="main">
   <section class="wrap-container">
     <%= link_to image_tag("middleman-logo.svg", { alt: t("index.logo_alt") }), "#{locale_prefix}/",
       class: "hero-content-logo" %>
