--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -32,7 +32,7 @@ $base-z-index: 0;
 // Colors
 $dark-gray: #4a4e56;
 $medium-gray: #999;
-$white: #fff
+$white: #fff;
 
 // Middleman colors
 $mm-yellow: #fbc547;
