--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -55,15 +55,15 @@ a {
   text-decoration: none;
   transition: color 0.1s linear;
 
-  &:hover {
+  &:hover,
+  &:active {
     color: $hover-link-color;
   }
+}
 
-  &:active,
-  &:focus {
-    color: $hover-link-color;
-    outline: none;
-  }
+*:focus {
+  box-shadow: 0 0 0 2px currentColor;
+  outline: none;
 }
 
 hr {
